--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  flutter_bloc: ^7.3.0
+  provider: ^6.0.2
+  equatable: ^2.0.3
+  copy_with_extension: ^4.0.0
   floor: ^1.2.0
 
 
@@ -39,6 +44,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.0.0
+  copy_with_extension_gen: ^4.0.1
   floor_generator: ^1.2.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
